📖 Fix: docs light theme low contrast appearance.

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -13,7 +13,7 @@
     --vp-button-brand-bg: var(--vp-c-brand-2);
     --vp-button-brand-active-bg: var(--vp-c-brand-1);
     --vp-button-brand-hover-bg: var(--vp-c-brand-1);
-    --vp-code-color: #c9def1;
+    --vp-code-color: var(--vp-c-green-2);
     --vp-c-brand-light: var(--vp-c-brand-2);
     --vp-c-gutter: var(--vp-c-divider);
 }
